[package]
edition = "2021"
name = "http-async-publisher"
version = "0.1.0"

[[bin]]
name = "http-async-publisher"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.17", features = ["macros"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
google-cloud-default = {version = "0.2.0", features = ["pubsub"]}
google-cloud-googleapis = "0.8.0"
google-cloud-pubsub = "0.14.1"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.4.0", features = ["trace"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
